# nest-schema

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  MANIFEST.in  Makefile  README.md  chapter.json  common.json  mkdocs.yaml  project.json  pyproject.toml
.github/: dependabot.yml
.github/actions/validate/: Dockerfile  action.yaml  entrypoint.sh  main.py  requirements.txt
.github/workflows/: ci-cd.yaml
docker/: Dockerfile.test
docs/: Makefile  code-of-conduct.md  contributing.md  index.md  project.md  pyproject.toml
docs/docker/: Dockerfile.local
docs/scripts/: generate_schema_docs.py
src/owasp_schema/: __init__.py
src/owasp_schema/utils/: schema_validators.py
tests/: conftest.py  package_test.py  project_test.py
tests/actions/validate/: chapter_test.py  committee_test.py  main_test.py  project_test.py
tests/common/: repository_test.py
tests/data/actions/validate/chapter/positive/: valid_chapter.yaml
tests/data/actions/validate/project/negative/: audience_empty.yaml
tests/data/project/negative/: audience_invalid.yaml  community_empty.yaml  community_non_unique.yaml  community_null.yaml  demo_empty.yaml  demo_non_unique.yaml  documentation_invalid.yaml  documentation_non_unique.yaml  downloads_invalid.yaml  leaders_non_unique.yaml  leaders_null.yaml  level_invalid.yaml  license_invalid.yaml  logo_non_unique.yaml  mailing_list_empty.yaml  mailing_list_null.yaml  tags_non_unique.yaml  tags_null.yaml  website_empty.yaml
tests/data/project/positive/: optional_properties.yaml
tests/data/schema/chapter/negative/: blog_empty.yaml  blog_invalid.yaml  blog_null.yaml  community_empty.yaml  community_non_unique.yaml  community_null.yaml  currency_empty.yaml  currency_invalid_length.yaml  currency_invalid_lowercase.yaml  events_empty.yaml  events_non_unique.yaml  events_null.yaml  leaders_empty.yaml  leaders_non_unique.yaml  leaders_null.yaml  leaders_undefined.yaml  location_empty.yaml  location_null.yaml  logo_empty.yaml  logo_non_unique.yaml  logo_null.yaml  mailing_list_empty.yaml  mailing_list_invalid.yaml  mailing_list_null.yaml  meetup_group_empty.yaml  meetup_group_null.yaml  name_empty.yaml  name_null.yaml  name_undefined.yaml  repositories_empty.yaml  repositories_non_unique.yaml  repositories_null.yaml  social_media_empty.yaml  social_media_non_unique.yaml  social_media_null.yaml  sponsors_empty.yaml  sponsors_non_unique.yaml  sponsors_null.yaml  tags_empty.yaml  tags_non_unique.yaml  (+4 more)
tests/data/schema/chapter/positive/: optional_properties.yaml
tests/data/schema/committee/positive/: optional_properties.yaml
tests/data/schema/common/community/negative/: description_null.yaml  name_empty.yaml  name_null.yaml  platform_empty.yaml  platform_invalid.yaml  platform_null.yaml  platform_undefined.yaml  url_empty.yaml  url_invalid.yaml  url_null.yaml  url_undefined.yaml
tests/data/schema/common/community/positive/: optional_properties.yaml  required_properties.yaml
tests/data/schema/common/location/negative/: address_empty.yaml  address_null.yaml  city_empty.yaml  city_null.yaml  country_code_empty.yaml  country_code_invalid.yaml  country_code_null.yaml  country_code_undefined.yaml  country_empty.yaml  country_null.yaml  (+15 more)
tests/data/schema/project/negative/: blog_empty.yaml  blog_invalid.yaml  blog_null.yaml  demo_invalid.yaml  demo_null.yaml  documentation_empty.yaml  documentation_invalid.yaml  documentation_null.yaml  downloads_empty.yaml  downloads_invalid.yaml  downloads_non_unique.yaml  downloads_null.yaml  events_empty.yaml  events_non_unique.yaml  events_null.yaml  leaders_empty.yaml  leaders_max.yaml  leaders_undefined.yaml  level_undefined.yaml  license_invalid.yaml  logo_empty.yaml  logo_null.yaml  mailing_list_invalid.yaml  name_empty.yaml  name_invalid.yaml  name_null.yaml  name_undefined.yaml  pitch_empty.yaml  pitch_null.yaml  pitch_undefined.yaml  repositories_empty.yaml  repositories_non_unique.yaml  repositories_null.yaml  social_media_empty.yaml  social_media_non_unique.yaml  social_media_null.yaml  sponsors_empty.yaml  sponsors_non_unique.yaml  sponsors_null.yaml  tags_empty.yaml  (+4 more)
tests/data/schema/project/positive/: optional_properties.yaml  required_properties.yaml
tests/schema/: chapter_test.py  committee_test.py  project_test.py
tests/schema/common/: community_test.py  events_test.py  location_test.py  logo_test.py  mailing_list_test.py  person_test.py  repository_test.py  social_media_test.py  sponsor_test.py
(+14 files in other folders)
