[tool.poetry]
name = "owasp-schema"
version = "0.1.9"
description = "A collection of OWASP schemas"
authors = ["Arkadii Yakovets <arkadii.yakovets@owasp.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://nest.owasp.org"
repository = "https://github.com/OWASP/Nest"
keywords = ["owasp", "schema", "json-schema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "owasp_schema", from = "src" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
jsonschema = "^4.23.0"
python = "^3.11"
pyyaml = "^6.0.2"
validators = "^0.35.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pytest = "^8.3.4"

ruff = "^0.12.7"
[tool.poetry.build]
generate-setup-file = false

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
ignore = [
    "ANN",
    "D103",
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D104"]
"**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "validators.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "referencing.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "owasp_schema.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
